[workspace]
members = ["derive", "jsonrpc"]

[package]
name = "deltachat_jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"
path = "src/webserver.rs"

# [[bin]]
# name = "test"
# path = "src/test.rs"

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
anyhow = "1.0.52"
serde = "1.0.133"
serde_json = "1.0.74"
async-std = { version="1.9.0", features = ["attributes"]}
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust" }
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"
async-trait = "0.1.52"
jsonrpc = { path  = "./jsonrpc" }
