[package]
name = "yerpc-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = "1.0.136"
serde_json = "1.0.79"
yerpc = { path  = "../yerpc", features = ["anyhow"]}
axum = { version = "0.5.9", features = ["ws"] }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
tracing = "0.1.35"
futures-util = "0.3.21"
