[package]
name = "yerpc_derive"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/Frando/yerpc"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = {version="1.0.73", features=["full", "parsing"]}
darling = "0.13.1"
convert_case = "0.5.0"
