[package]
name = "yerpc_derive"
version = "0.4.2"
edition = "2018"
description = "Proc macros for yerpc"
license = "Apache-2.0/MIT"
repository = "https://github.com/Frando/yerpc"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["full", "parsing"] }
darling = "0.14.0"
convert_case = "0.5.0"
