[package]
name = "yerpc-tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
async-std = "1.10.0"
yerpc = { path = "../yerpc" }
serde_json = "1.0.75"
anyhow = "1.0.52"
futures = "0.3.19"
