[package]
name = "yerpc-tide"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "tide integration for the yerpc JSON-RPC library"
repository = "https://github.com/deltachat/yerpc"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
async-std = "1.11.0"
yerpc = { path = "../yerpc", version = "0.5" }
serde_json = "1.0.79"
anyhow = "1.0.57"
futures = "0.3.21"
