[package]
name = "yerpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/Frando/yerpc"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yerpc_derive = { path  = "../yerpc-derive" }
async-trait = "0.1.52"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
log = "0.4.14"
typescript-type-def = { git = "https://github.com/Frando/rust-typescript-type-def.git", branch = "delta", features = ["json_value"] }
anyhow = { version = "1.0.52", optional = true }
futures = "0.3.19"
async-channel = "1.6.1"
async-mutex = "1.4.0"


[features]
anyhow_expose = []
