[package]
name = "yerpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/Frando/yerpc"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yerpc_derive = { path  = "../yerpc-derive" }
async-trait = "0.1.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.16"
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
anyhow = { version = "1.0.57", optional = true }
futures = "0.3.21"
async-channel = "1.6.1"
async-mutex = "1.4.0"

[features]
anyhow_expose = []

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
anyhow = "1.0.57"
