[package]
name = "yerpc"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/Frando/yerpc"
description = "Ergonomic JSON-RPC library for async Rust with Axum support"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

[[bin]]
name = "generate-base-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yerpc_derive = { path  = "../yerpc-derive", version = "0.4" }
async-trait = "0.1.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.16"
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
futures = "0.3.21"
futures-util = "0.3.21"
async-channel = "1.6.1"
async-mutex = "1.4.0"

# optional dependencies
anyhow = { version = "1.0.57", optional = true }
axum = { version = "0.6.6", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.17", optional = true }
tokio = { version = "1.19.2", features = ["rt", "macros"], optional = true }
tracing = { version = "0.1.35", optional = true }

[features]
anyhow_expose = ["anyhow"]
support-axum = ["axum", "tokio", "anyhow", "tracing"]
support-tungstenite = ["tokio", "tokio-tungstenite", "anyhow"]

[dev-dependencies]
anyhow = "1.0.57"
axum = { version = "0.6.6", features = ["ws"] }
tokio-tungstenite = { version = "0.17" }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
url = "2.2.2"
