[package]
name = "yerpc_example_axum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yerpc-axum"
path = "src/webserver.rs"

[dependencies]
anyhow = "1.0.57"
serde = "1.0.136"
serde_json = "1.0.79"
futures = "0.3.21"
log = "0.4.16"
async-trait = "0.1.53"
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
async-broadcast = "0.4.0"
yerpc = { path  = "../../yerpc", features = ["anyhow", "support-axum"]}
axum = { version = "0.5.9", features = ["ws"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
tower-http = { version = "0.3.0", features = ["trace"] }
schemars = "0.8.11"
