[package]
name = "yerpc_example_tide"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yerpc_example_tide"
path = "src/webserver.rs"

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
anyhow = "1.0.57"
serde = "1.0.136"
serde_json = "1.0.79"
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.16"
async-trait = "0.1.53"
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
async-broadcast = "0.4.0"
yerpc = { path  = "../../yerpc", features = ["anyhow"]}
yerpc-tide = { path  = "../../yerpc-tide" }
