[package]
name = "yerpc_example_webserver_tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"
path = "src/webserver.rs"

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
anyhow = "1.0.52"
serde = "1.0.133"
serde_json = "1.0.74"
async-std = { version="1.9.0", features = ["attributes"]}
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"
async-trait = "0.1.52"
typescript-type-def = { version = "0.5", features = ["json_value"] }
async-broadcast = "0.3.4"
yerpc = { path  = "../../yerpc", features = ["anyhow"]}
yerpc-tide = { path  = "../../yerpc-tide" }
